<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sondir Test</string>
    <string name="project">Project / Proyek</string>
    <string name="location">Location / Lokasi</string>
    <string name="hole_id">Hole ID / Identitas Lubang</string>
    <string name="engineer">Engineer / Penguji</string>
    <string name="easting">Coordinate / Koordinat</string>
    <string name="elevation">Elevation / Ketinggian</string>
    <string name="date">Date / Tanggal</string>
    <string name="calculate">Hitung</string>
    <string name="change_data">Ubah Data</string>
    <string name="dummy_project">Tol Terbanggi Besar</string>
    <string name="dummy_location">100+200</string>
    <string name="dummy_hole_id">S-60</string>
    <string name="dummy_engineer">Seseorang</string>
    <string name="dummy_easting">9555350.87</string>
    <string name="dummy_elevation">N/A</string>
    <string name="dummy_date">5-Aug-17</string>
    <string name="depth">Depth</string>
    <string name="cone_resistance">Cone Penetration</string>
    <string name="total_resistance">Total Penetration</string>
    <string name="in_meter">\n(m)</string>
    <string name="in_kilos_per_centi">\n(kg/cm²)</string>
    <string name="in_percent">\n(%)</string>
    <string name="local_friction">Local Friction</string>
    <string name="total_cumulative_friction">Total Cumulative Friction</string>
    <string name="friction_ratio">Friction Ratio</string>
    <string name="soil_type">Soil\nType</string>
    <string name="soil_type_handbor">Soil Type\n(Handbor)</string>
    <string name="go_to_graph">Lihat Grafik</string>
    <string name="chart_of_tcf">Grafik dari Total Cumulative Friction</string>
    <string name="chart_of_fr">Grafik dari Friction Ratio</string>
    <string name="tcf" tools:keep="@string/tcf">TCF</string>
    <string name="fr" tools:keep="@string/fr">FR</string>
    <string name="owner_name">Presented by Mayang Andan Sari</string>
    <string name="avatar">Avatar</string>
    <string name="depth_m">Depth (m)</string>
    <string name="tcf_kg_cm">TCF (Kg/cm²)</string>
    <string name="fr_percent">FR (%)</string>
    <string name="nama_aplikasi">Nama Aplikasi</string>
    <string name="sondir_test">: Sondir Test</string>
    <string name="nama_kreator">Nama Kreator</string>
    <string name="mayang_andan_sari">: Mayang Andan Sari</string>
    <string name="nim">NIM</string>
    <string name="creator_nim">: 17505241069</string>
    <string name="prodi">Prodi</string>
    <string name="pendidikan_teknik_sipil_n_tdan_perencanaan">: Pendidikan Teknik Sipil \n\tdan Perencanaan</string>
    <string name="nemail">\nEmail</string>
    <string name="mayangandansari_gmail_com">: mayangandansari@gmail.com</string>
    <string name="petunjuk_pemakaian">Petunjuk Pemakaian</string>
    <string name="pengisian_data">Pengisian Data</string>
    <string name="background">background</string>
    <string name="icon">icon</string>
    <string name="materi">Materi</string>
    <string name="petunjuk_npenggunaan">Petunjuk\nPenggunaan</string>
    <string name="referensi">Referensi</string>
    <string name="perhitungan">Perhitungan</string>
    <string name="profil">Profil</string>
</resources>