<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_3"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DescriptionActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0.8"

        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp">


            <TextView
                android:id="@+id/label_app_name"
                style="@style/DescriptionTextStyle"
                android:layout_marginStart="16dp"
                android:text="@string/nama_aplikasi"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description_app_name"
                style="@style/DescriptionTextStyle"
                android:layout_marginStart="16dp"
                android:text="@string/sondir_test"
                app:layout_constraintLeft_toRightOf="@id/label_app_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_creator_name"
                style="@style/DescriptionTextStyle"
                android:text="@string/nama_kreator"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@+id/label_app_name"
                app:layout_constraintTop_toBottomOf="@id/label_app_name" />

            <TextView
                android:id="@+id/description_creator_name"
                style="@style/DescriptionTextStyle"
                android:text="@string/mayang_andan_sari"
                app:layout_constraintStart_toStartOf="@+id/description_app_name"
                app:layout_constraintTop_toBottomOf="@id/description_app_name" />

            <TextView
                android:id="@+id/label_creator_nim"
                style="@style/DescriptionTextStyle"
                android:text="@string/nim"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@+id/label_creator_name"
                app:layout_constraintTop_toBottomOf="@id/label_creator_name" />

            <TextView
                android:id="@+id/description_creator_nim"
                style="@style/DescriptionTextStyle"
                android:text="@string/creator_nim"
                app:layout_constraintStart_toStartOf="@id/description_creator_name"
                app:layout_constraintTop_toBottomOf="@id/description_creator_name" />

            <TextView
                android:id="@+id/label_creator_prodi"
                style="@style/DescriptionTextStyle"
                android:text="@string/prodi"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@+id/label_creator_nim"
                app:layout_constraintTop_toBottomOf="@id/label_creator_nim" />

            <TextView
                android:id="@+id/description_creator_prodi"
                style="@style/DescriptionTextStyle"
                android:maxLines="2"
                android:text="@string/pendidikan_teknik_sipil_n_tdan_perencanaan"
                app:layout_constraintStart_toStartOf="@id/description_creator_nim"
                app:layout_constraintTop_toBottomOf="@id/description_creator_nim" />

            <TextView
                android:id="@+id/label_creator_email"
                style="@style/DescriptionTextStyle"
                android:text="@string/nemail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@+id/label_creator_prodi"
                app:layout_constraintTop_toBottomOf="@id/label_creator_prodi" />

            <TextView
                android:id="@+id/description_creator_email"
                style="@style/DescriptionTextStyle"
                android:text="@string/mayangandansari_gmail_com"
                app:layout_constraintStart_toStartOf="@id/description_creator_prodi"
                app:layout_constraintTop_toBottomOf="@id/description_creator_prodi" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_about">

        <Button
            android:id="@+id/btn_user_guide"
            style="@style/ButtonAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:text="@string/petunjuk_pemakaian" />

        <Button
            android:id="@+id/btn_next"
            style="@style/ButtonAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="2"
            android:text="@string/pengisian_data" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>