<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_500"
    tools:context=".SplashScreenActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:contentDescription="@string/avatar"
            android:id="@+id/avatar"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:scaleType="fitXY"
            android:src="@drawable/splash"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-46dp"
            android:padding="4dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:fontFamily="@font/concert_one"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/owner_name"
            android:textSize="12sp"
            android:textStyle="italic" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>